<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Electric Fields</string>
    <string name="app_folder_pictures" translatable="false">@string/app_name</string>

    <!-- Notifications. -->
    <string name="finished">Rendering is finished.</string>

    <!-- Share. -->
    <string name="sendImage" msgid="7279510542799399570">"Share picture via"</string>
    <string name="menu_share" translatable="false">@string/sendImage</string>
    <string name="share_title" translatable="false">@string/app_name</string>
    <string name="save_failed">Saving image failed.</string>

    <!-- Menu. -->
    <string name="menu_fullscreen">Fullscreen</string>
    <string name="menu_random">Randomise</string>
    <string name="menu_stop" translatable="false">@android:string/cancel</string>

    <!-- Live wallpaper. -->
    <string name="wallpaper_description" translatable="false">@string/app_name</string>

    <!-- Palette -->
    <string name="menu_palette" translatable="false">@string/palette_title</string>
    <string name="palette_title">Palette</string>
    <string name="palette_density">Density</string>
    <string name="palette_hues">Hues</string>
</resources>
