<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_fullscreen"
        android:icon="@drawable/ic_menu_fullscreen"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/menu_fullscreen"/>
    <item
        android:id="@+id/menu_random"
        android:icon="@drawable/ic_menu_random"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/menu_random"/>
    <item
        android:id="@+id/menu_stop"
        android:visible="false"
        android:icon="@drawable/ic_menu_stop"
        android:orderInCategory="3"
        android:showAsAction="always"
        android:title="@string/menu_stop"/>
    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_menu_share"
        android:orderInCategory="5"
        android:showAsAction="always"
        android:title="@string/menu_share"/>
    <item
        android:id="@+id/menu_palette"
        android:icon="@drawable/ic_menu_palette"
        android:orderInCategory="90"
        android:showAsAction="ifRoom"
        android:title="@string/menu_palette"/>
</menu>